--- a/src/index.css
+++ b/src/index.css
@@ -8,6 +8,10 @@
   --light-gray-color: #f2f4f7;
   --light-color: #f7f7f7;
   --white-color: #fff;
+
+  --dark-accent-color: #b92a2a;
+
+  --transition: 150ms ease-out;
 }
 
 * {
@@ -16,22 +20,24 @@
 
 body {
   margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
+  font-family: 'Inter', sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
 
   background-color: var(--white-color);
-  font-weight: 500;
+  font-weight: 400;
   color: var(--main-dark-color);
   cursor: default;
+  letter-spacing: 0;
+  font-size: 16px;
+  line-height: 24px;
 }
 
 code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
 }
+
 h1,
 h2,
 h3,
@@ -40,6 +46,8 @@ h5,
 h6,
 p {
   margin: 0;
+  font-size: inherit;
+  font-weight: inherit;
 }
 
 ul {
@@ -48,11 +56,34 @@ ul {
   list-style: none;
 }
 
+img {
+  display: block;
+  width: 100%;
+  height: auto;
+}
+
+a {
+  text-decoration: none;
+  color: currentColor;
+}
+
 button {
   border: none;
   cursor: pointer;
+  line-height: inherit;
 }
 
 .bodyFixed {
   position: fixed;
+}
+
+.visuallyHidden {
+  position: absolute;
+  clip: rect(1px 1px 1px 1px);
+  clip: rect(1px, 1px, 1px, 1px);
+  padding: 0;
+  border: 0;
+  height: 1px;
+  width: 1px;
+  overflow: hidden;
 }
