--- a/src/components/CamperModal/CamperModal.module.css
+++ b/src/components/CamperModal/CamperModal.module.css
@@ -1,5 +1,27 @@
+.backdrop {
+  position: fixed;
+  top: 0;
+  left: 0;
+
+  width: 100%;
+  height: 100%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  background-color: #27272773;
+}
+
 .modal {
   width: 400px;
   outline: 1px solid black;
   background-color: #fff;
+}
+
+/* nav link */
+.navLink {
+}
+
+.navLinkActive {
+  composes: navLink;
+  color: var(--accent-color);
 }
