--- a/src/components/CampersList/CampersList.module.css
+++ b/src/components/CampersList/CampersList.module.css
@@ -12,7 +12,7 @@
   gap: 24px;
 
   border-radius: 20px;
-  border: 1px solid #10182820;
+  border: 1px solid var(--light-grey-trans);
 }
 
 .cardImg {
