--- a/src/components/CampersFilters/CampersFilters.module.css
+++ b/src/components/CampersFilters/CampersFilters.module.css
@@ -70,6 +70,10 @@
   align-items: flex-end;
   margin-bottom: 32px;
 }
+.filterListSecond {
+  composes: filterList;
+  margin-bottom: 64px;
+}
 
 .filterItem {
   position: relative;
