--- a/src/components/ModalBackdrop/ModalBackdrop.module.css
+++ b/src/components/ModalBackdrop/ModalBackdrop.module.css
@@ -2,11 +2,13 @@
   position: fixed;
   top: 0;
   left: 0;
+  z-index: 3;
 
   width: 100%;
   height: 100%;
   display: flex;
   justify-content: center;
   align-items: center;
-  background-color: #27272773;
+  background-color: var(--dark-grey-trans);
+  backdrop-filter: var(--blur);
 }
