--- a/src/components/CamperModal/CamperModal.module.css
+++ b/src/components/CamperModal/CamperModal.module.css
@@ -16,13 +16,22 @@
   align-items: center;
   justify-content: center;
   color: var(--main-dark-color);
-  background-color: transparent;
+  border-radius: 50%;
+  padding: 8px;
+  background-color: var(--light-grey-trans);
+  backdrop-filter: none;
 
   transition: var(--transition);
 }
 .modalClose:hover,
 .modalClose:focus {
   color: var(--dark-accent-color);
+  background-color: var(--white-trans);
+  backdrop-filter: var(--blur);
+}
+
+.modalCloseIcon {
+  pointer-events: none;
 }
 
 /* modal header */
@@ -86,4 +95,11 @@
 
 .modalNavWrapper {
   border-bottom: 1px solid var(--light-grey-trans);
+}
+
+/* modal details */
+.modalDetailWrapper {
+  padding-top: 44px;
+  display: flex;
+  gap: 24px;
 }
