--- a/src/components/CampersFilters/CampersFilters.module.css
+++ b/src/components/CampersFilters/CampersFilters.module.css
@@ -88,7 +88,7 @@
   gap: 8px;
 
   border-radius: 10px;
-  border: 1px solid var(--light-grey-trans);
+  border: var(--border);
   font-weight: 500;
   line-height: 20px;
 }
