features section added

--- a/src/components/CamperModal/CamperModal.module.css
+++ b/src/components/CamperModal/CamperModal.module.css
@@ -98,8 +98,12 @@
 }
 
 /* modal details */
-.modalDetailWrapper {
+.modalDetailSection {
   padding-top: 44px;
   display: flex;
   gap: 24px;
+}
+
+.modalDetailWrapper {
+  width: 430px;
 }
