--- a/src/components/CampersList/CampersList.module.css
+++ b/src/components/CampersList/CampersList.module.css
@@ -1,8 +1,13 @@
 /* card layout */
+.listWrapper {
+  text-align: center;
+}
+
 .list {
   display: flex;
   flex-direction: column;
   gap: 32px;
+  margin-bottom: 50px;
 }
 
 .card {
