toggle favourite state implemented

--- a/src/components/CampersList/CampersList.module.css
+++ b/src/components/CampersList/CampersList.module.css
@@ -45,6 +45,11 @@
   gap: 10px;
 }
 
+.cardFavBtn {
+  display: flex;
+  background-color: transparent;
+}
+
 /* card sub header */
 .cardSubHeader {
   font-size: 16px;
