--- a/src/components/ModalForm/ModalForm.module.css
+++ b/src/components/ModalForm/ModalForm.module.css
@@ -35,6 +35,7 @@
 .formInput {
   border: none;
   background-color: var(--light-color);
+  color: var(--dark-grey-color);
   border-radius: 10px;
   padding: 18px;
   width: 100%;
@@ -46,27 +47,42 @@
   outline: none;
 }
 
+/* date input styles */
 .formDateInput {
   composes: formInput;
 }
-
-.formCommentInput {
-  composes: formInput;
-  resize: none;
-}
-
-::-webkit-datetime-edit {
-  opacity: 0;
+.formDateInput::-webkit-datetime-edit {
   font-family: inherit;
   letter-spacing: 1px;
   color: var(--dark-grey-color);
 }
-.formInput:focus::-webkit-datetime-edit {
+.formDateInput:focus::-webkit-datetime-edit {
   opacity: 1;
 }
 
-::-webkit-calendar-picker-indicator {
+.formDateInput::-webkit-calendar-picker-indicator {
+  background: transparent;
+  bottom: 0;
+  color: transparent;
+  cursor: pointer;
+  height: auto;
+  left: 0;
+  position: absolute;
+  right: 0;
+  top: 0;
+  width: auto;
+}
+.formDateInputEmpty {
+  composes: formDateInput;
+}
+.formDateInputEmpty::-webkit-datetime-edit {
   opacity: 0;
+}
+
+.formDateIcon {
+  position: absolute;
+  top: 18px;
+  right: 18px;
 }
 
 .formLabelText {
@@ -76,8 +92,8 @@
   color: var(--dark-grey-trans);
 }
 
-.formDateIcon {
-  position: absolute;
-  top: 18px;
-  right: 18px;
+.formCommentInput {
+  composes: formInput;
+  font-family: inherit;
+  resize: none;
 }
