--- a/src/components/CampersList/CampersList.module.css
+++ b/src/components/CampersList/CampersList.module.css
@@ -4,14 +4,14 @@
 }
 
 .list {
+  width: 888px;
   display: flex;
   flex-direction: column;
   gap: 32px;
-  margin-bottom: 50px;
 }
 
 .card {
-  width: 888px;
+  width: 100%;
   padding: 24px;
   display: flex;
   gap: 24px;
