--- a/src/components/Header/Header.module.css
+++ b/src/components/Header/Header.module.css
@@ -2,9 +2,13 @@
   z-index: 2;
   position: fixed;
   width: 100%;
-  padding: 20px 60px 0px;
+  padding-top: 20px;
 
   border-bottom: 1px solid var(--light-grey-trans);
   background-color: var(--white-trans);
   backdrop-filter: var(--blur);
+}
+
+.headerNav {
+  padding: 0 60px;
 }
