--- a/src/components/Features/Features.module.css
+++ b/src/components/Features/Features.module.css
@@ -1,24 +1,5 @@
-/* item detail list */
-.itemTagsList {
-  display: flex;
-  flex-wrap: wrap;
-  gap: 8px;
+.tagsWrapper {
   margin-bottom: 44px;
-}
-
-.itemTagsPoint {
-  padding: 12px 18px;
-  border-radius: 100px;
-  display: flex;
-  align-items: center;
-  gap: 8px;
-  background-color: var(--light-gray-color);
-}
-
-.itemTagsText {
-  font-weight: 500;
-  line-height: 20px;
-  text-transform: capitalize;
 }
 
 .featuresTitle {
